# sdl2_opengl_starter

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  app.cpp  app.h  main.cpp  window.h
app/gfx/: gl.cpp  gl.h  image.cpp
app/src/: app.cpp  app.h  engine.cpp  engine.h  gl.cpp  gl.h  image.cpp  image.h  main.cpp  window.cpp  window.h
app/src/gfx/: gfx.h  gl.h  image.cpp  image.h
gfx/: CMakeLists.txt  app.cpp  app.h  gfx.cpp  gfx.h
lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
